<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.cerner.ccl</groupId>
    <artifactId>ccltesting-reactor-pom</artifactId>
    <version>2.0.0-NR</version>
    <packaging>pom</packaging>
    <name>CCL Testing Plugins</name>
    <description>A reactor pom for generating the CCL Testing plugins and depdendencies</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <scm>
        <connection>scm:git:https://github.com/cerner/ccl-testing.git</connection>
        <developerConnection>scm:git:https://github.com/cerner/ccl-testing.git</developerConnection>
        <url>https://github.com/cerner/ccl-testing</url>
    </scm>
    <distributionManagement>
        <site>
            <id>github</id>
            <url>https://github.com/cerner/ccl-testing/blob/maven-site/${release.number}</url>
        </site>
    </distributionManagement>
    <modules>
        <module>ccl-maven-plugin</module>
        <module>ftp-util</module>
        <module>jsch-util</module>
        <module>j4ccl-ssh</module>
        <module>cerreal-maven-plugin</module>
        <module>whitenoise/whitenoise-engine</module>
        <module>whitenoise/whitenoise-maven-plugin</module>
        <module>archetype/cclunit-archetype</module>
        <module>parent-pom</module>
        <module>j4ccl</module>
        <module>cdoc/cdoc-parser</module>
        <module>cdoc/cdoc-maven-plugin</module>
        <module>cclunit-framework-schema-xml</module>
        <module>whitenoise/whitenoise-parent-pom</module>
        <module>whitenoise/whitenoise-data</module>
        <module>whitenoise/whitenoise-data-jdom-ext</module>
        <module>whitenoise/whitenoise-rules-core</module>
        <module>archetype/cclunit-maven-settings-check-archetype</module>
    </modules>
    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav-jackrabbit</artifactId>
                <version>2.12</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.10.0</version>
                <executions>
                    <execution>
                        <id>fmt-format</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.8.2</version>
                <configuration>
                    <skipDeploy>true</skipDeploy>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.12</version>
                <configuration>
                    <server>github</server>
                    <branch>refs/head/maven-site</branch>
                    <path>maven-site/${release.number}/</path>
                    <outputDirectory>target/staging</outputDirectory>
                    <message>deploy the maven site</message>
                    <merge>true</merge>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>site-deploy</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.8.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.9</version>
            </plugin>
        </plugins>
    </reporting>
    <profiles>
        <profile>
            <id>site</id>
            <modules>
                <module>parent-pom</module>
                <module>ftp-util</module>
                <module>j4ccl</module>
                <module>j4ccl-ssh</module>
                <module>jsch-util</module>
                <module>cclunit-framework-schema-xml</module>
                <module>ccl-maven-plugin</module>
                <module>cerreal-maven-plugin</module>
                <module>whitenoise/whitenoise-parent-pom</module>
                <module>whitenoise/whitenoise-data</module>
                <module>whitenoise/whitenoise-data-jdom-ext</module>
                <module>whitenoise/whitenoise-rules-core</module>
                <module>whitenoise/whitenoise-engine</module>
                <module>whitenoise/whitenoise-maven-plugin</module>
                <module>cdoc/cdoc-parser</module>
                <module>cdoc/cdoc-maven-plugin</module>
                <module>archetype/cclunit-archetype</module>
                <module>archetype/cclunit-maven-settings-check-archetype</module>
            </modules>
        </profile>
    </profiles>
</project>
